@@ -1,5 +1,6 @@
 Version 2.02.00 - 
 ===================================
+  A pvresize implementation.
   Fix contiguous allocation when there are no preceding segments.
   Add mirror_seg pointer to lv_segment struct.
   Only keep a device open if it's known to belong to a locked VG.
